# cpp_resource_loader_demo

./: CMakeLists.txt  ExampleConcrete.cpp  ExampleConcrete.hpp  JsonResource.cpp  JsonResource.hpp  MiniJson.hpp  README.md  Registry.cpp  Registry.hpp  ResourceKey.cpp  ResourceKey.hpp  ResourceLoader.cpp  ResourceLoader.hpp  ResourceManager.cpp  ResourceManager.hpp  ResourceTypes.hpp  demo.cpp  main.cpp
demo_pack/data/city/buildings/: apartment.json  supermarket.json
